--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -29,7 +29,7 @@
             max-width: 500px;
             width: 90%;
             text-align: center;
-            transition: box-shadow 0.3s, border-color 0.3s;
+            transition: box-shadow 0.3s, border-color 0.3s, color 0.3s;
         }
 
         .red-glow {
@@ -37,12 +37,12 @@
         }
 
         .red-text {
-            color: #ff0000 !important;
+            color: #ff0000 !important; /* Turn text red */
             text-shadow: 0 0 20px #ff0000 !important;
         }
 
         .red-border {
-            border-color: #ff0000 !important;
+            border-color: #ff0000 !important; /* Turn borders red */
         }
 
         h1 {
@@ -63,7 +63,7 @@
             color: #00ff00;
             background-color: #1b1b1b;
             box-shadow: 0 0 10px rgba(0, 255, 0, 0.5);
-            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease, color 0.3s ease;
             resize: none;
         }
 
@@ -150,13 +150,13 @@
         // Toggle classes for glow, text color, and border color
         elements.forEach(element => {
             if (element) {
-                element.classList.toggle('red-glow');
-                if (element.tagName === "H1" || element.tagName === "TEXTAREA" || element.tagName === "BUTTON") {
-                    element.classList.toggle('red-text');
+                element.classList.toggle('red-glow'); // Apply red glow
+                if (element.tagName === "H1" || element.tagName === "TEXTAREA" || element.tagName === "INPUT") {
+                    element.classList.toggle('red-text'); // Change text color to red
                 }
                 // Apply red border if it's a textarea or input button
                 if (element.tagName === "TEXTAREA" || element.tagName === "INPUT") {
-                    element.classList.toggle('red-border');
+                    element.classList.toggle('red-border'); // Change border color to red
                 }
             }
         });
