--- a/public/index.html
+++ b/public/index.html
@@ -79,6 +79,7 @@ Aden
         <li><a href="t1a18-classes-Aden.html">t1a18-classes-Aden.html</a></li>
          <li><a href="t2a19-move-background-aden.html">t2a19-move-background-aden.html</a></li>
        <li><a href="t2a20-spy-Aden.html">t2a20-spy-Aden.html</a></li>
+        <li><a href="t2-a21-canvas-aden.html">t2-a21-canvas-aden.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
