--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -34,6 +34,13 @@
         <!-- Button to create a linear gradient -->
         <input type="button" value=".createLinearGradient(100, 300, 200, 400)" onclick="drawGradient();"><br><br>
 
+        <!-- New features -->
+        <input type="button" value=".drawRectangle(150, 150, 100, 50)" onclick="drawRectangle();">
+        <input type="button" value=".fillCircle(300, 300, 40)" onclick="fillCircle();">
+        <input type="button" value=".drawBezierCurve()" onclick="drawBezierCurve();">
+        <input type="button" value=".drawStar(500, 300, 30, 70, 5)" onclick="drawStar();">
+        <input type="button" value="Draw Image" onclick="drawImage();"><br><br>
+
         <!-- Button to clear a small rectangle -->
         <input type="button" value="clearRect(20, 20, 50, 50)" onclick="clearRectangle();">
         
@@ -90,6 +97,59 @@
             myContext.fillStyle = myGradient;
             myContext.fillRect(100, 300, 200, 100); // Adjusted height
             myContext.fillStyle = 'black'; // Reset fillStyle
+        }
+
+        function drawRectangle() {
+            myContext.fillStyle = 'orange';
+            myContext.fillRect(150, 150, 100, 50);
+        }
+
+        function fillCircle() {
+            myContext.beginPath();
+            myContext.fillStyle = 'purple';
+            myContext.arc(300, 300, 40, 0, 2 * Math.PI);
+            myContext.fill();
+        }
+
+        function drawBezierCurve() {
+            myContext.beginPath();
+            myContext.moveTo(200, 300);
+            myContext.bezierCurveTo(250, 100, 350, 500, 400, 300);
+            myContext.stroke();
+        }
+
+        function drawStar(cx, cy, spikes, outerRadius, innerRadius) {
+            let rot = (Math.PI / 2) * 3;
+            let x = cx;
+            let y = cy;
+            const step = Math.PI / spikes;
+
+            myContext.beginPath();
+            myContext.moveTo(cx, cy - outerRadius);
+
+            for (let i = 0; i < spikes; i++) {
+                x = cx + Math.cos(rot) * outerRadius;
+                y = cy + Math.sin(rot) * outerRadius;
+                myContext.lineTo(x, y);
+                rot += step;
+
+                x = cx + Math.cos(rot) * innerRadius;
+                y = cy + Math.sin(rot) * innerRadius;
+                myContext.lineTo(x, y);
+                rot += step;
+            }
+            myContext.lineTo(cx, cy - outerRadius);
+            myContext.closePath();
+            myContext.fillStyle = 'gold';
+            myContext.fill();
+        }
+
+        function drawImage() {
+            const img = new Image();
+            img.src = 'https://via.placeholder.com/150'; // Placeholder image
+            img.onload = function() {
+                myContext.drawImage(img, 450, 250, 150, 150);
+            };
         }
 
         function clearRectangle() {
