--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -54,22 +54,25 @@
     <h2 align="center">t2a08-canvas by Fred</h2>
     
     <div>
+        <!-- Button to draw an animated triangle -->
         <button class="button" onclick="startAnimatedTriangle();">Animate Triangle</button>
+
+        <!-- Other buttons -->
         <button class="button" onclick="drawLine();">.lineTo(30,200)</button>
         <button class="button" onclick="drawArc();">.arc(95, 50, 40, 0, 2 * Math.PI)</button>
         <button class="button" onclick="drawText();">.fillText('Hello World', 400, 100)</button>
         <button class="button" onclick="drawQuadraticCurve();">.quadraticCurveTo(100,220,240,110)</button>
         <button class="button" onclick="drawGradient();">.createLinearGradient(100, 300, 200, 400)</button><br><br>
 
-        <button class="button" onclick="drawRectangle();">Draw Rectangle</button>
-        <button class="button" onclick="fillCircle();">Fill Circle</button>
-        <button class="button" onclick="drawBezierCurve();">Draw Bezier Curve</button>
+        <button class="button" onclick="drawRectangle();">.drawRectangle(150, 150, 100, 50)</button>
+        <button class="button" onclick="fillCircle();">.fillCircle(300, 300, 40)</button>
+        <button class="button" onclick="drawBezierCurve();">.drawBezierCurve()</button>
         <button class="button" onclick="drawStar(500, 300, 30, 70, 5);">Draw Star</button>
         <button class="button" onclick="drawCube();">Draw 3D Cube</button>
         <button class="button" onclick="drawImage();">Draw Image</button><br><br>
 
-        <button class="button" onclick="clearRectangle();">Clear Rect</button>
-        <button class="button" onclick="clearAll();">Clear All</button><br><br>
+        <button class="button" onclick="clearRectangle();">clearRect(20, 20, 50, 50)</button>
+        <button class="button" onclick="clearAll();">Clear all</button><br><br>
 
         <label for="color">Choose Color:</label>
         <input type="color" id="color" value="#000000">
@@ -97,10 +100,11 @@
         let drawingMode = 'free'; // Default drawing mode
         let currentColor = '#000000'; // Default color
         let currentLineWidth = 1; // Default line width
-        let angle = 0; // For animated triangle rotation
-        let scale = 1; // For animated triangle scaling
+        let angle = 0; // Initial angle for rotation
+        let scale = 0; // Initial scale for the triangle
         let animationId; // Variable to hold the requestAnimationFrame ID
 
+        // Mouse event listeners
         myCanvas.addEventListener('mousedown', (e) => {
             drawing = true;
             [lastX, lastY] = getMousePos(e);
@@ -109,22 +113,14 @@
         myCanvas.addEventListener('mousemove', (e) => {
             if (drawing) {
                 const [x, y] = getMousePos(e);
-                switch (drawingMode) {
-                    case 'free':
-                        drawLine(lastX, lastY, x, y);
-                        break;
-                    case 'rectangle':
-                        myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear before redrawing
-                        drawRectangle(lastX, lastY, x, y);
-                        break;
-                    case 'circle':
-                        myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear before redrawing
-                        drawCircle(lastX, lastY, x, y);
-                        break;
-                    case 'triangle':
-                        myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear before redrawing
-                        drawTriangle(lastX, lastY, x, y);
-                        break;
+                if (drawingMode === 'free') {
+                    drawLine(lastX, lastY, x, y);
+                } else if (drawingMode === 'rectangle') {
+                    drawRectangle(lastX, lastY, x, y);
+                } else if (drawingMode === 'circle') {
+                    drawCircle(lastX, lastY, x, y);
+                } else if (drawingMode === 'triangle') {
+                    drawTriangle(lastX, lastY, x, y);
                 }
                 lastX = x;
                 lastY = y;
@@ -132,9 +128,9 @@
         });
 
         myCanvas.addEventListener('mouseup', () => {
-            if (drawing) {
-                drawing = false; 
-                finalizeShape(); // Finalize the shape if not free drawing 
+            drawing = false;
+            if (drawingMode !== 'free') {
+                finalizeShape();
             }
         });
 
@@ -152,8 +148,8 @@
 
         function getMousePos(evt) {
             const rect = myCanvas.getBoundingClientRect();
-            const x = evt.clientX - rect.left;
-            const y = evt.clientY - rect.top;
+            const x = evt.clientX - rect.left; // Get mouse x position relative to canvas
+            const y = evt.clientY - rect.top;  // Get mouse y position relative to canvas
             return [x, y];
         }
 
@@ -168,16 +164,20 @@
 
         function drawArc() {
             myContext.beginPath();
-            myContext.lineWidth = currentLineWidth;
-            myContext.strokeStyle = currentColor;
+            myContext.lineWidth = 10;
+            myContext.strokeStyle = 'green';
             myContext.arc(95, 50, 40, 0, 2 * Math.PI);
             myContext.stroke();
         }
 
         function drawText() {
             myContext.font = '20px Arial';
-            myContext.fillStyle = currentColor;
             myContext.fillText('Hello World', 400, 100);
+            myContext.translate(400, 100);  
+            myContext.rotate(60 * Math.PI / 180); 
+            myContext.fillText('Hello World', 10, 10);
+            myContext.stroke();
+            myContext.resetTransform();  
         }
 
         function drawQuadraticCurve() {
@@ -194,7 +194,8 @@
             myGradient.addColorStop(1, 'yellow');
 
             myContext.fillStyle = myGradient;
-            myContext.fillRect(100, 300, 200, 100);
+            myContext.fillRect(100, 300, 200, 100); // Adjusted height
+            myContext.fillStyle = 'black'; // Reset fillStyle
         }
 
         function drawRectangle(fromX, fromY, toX, toY) {
@@ -207,7 +208,7 @@
 
         function fillCircle() {
             myContext.beginPath();
-            myContext.fillStyle = currentColor;
+            myContext.fillStyle = 'purple';
             myContext.arc(300, 300, 40, 0, 2 * Math.PI);
             myContext.fill();
         }
@@ -221,10 +222,10 @@
             myContext.stroke();
         }
 
-        function drawTriangle(fromX, fromY, toX, toY) {
-            const size = Math.sqrt(Math.pow(toX - fromX, 2) + Math.pow(toY - fromY, 2)) / 2; // Create size based on distance
-            myContext.save();
-            myContext.translate(fromX, fromY); // Move to the starting point
+        function drawTriangle(centerX, centerY, size, angle) {
+            myContext.save(); // Save the current state
+            myContext.translate(centerX, centerY); // Move to the center of the triangle
+            myContext.rotate(angle); // Rotate the triangle
             myContext.beginPath();
             myContext.moveTo(0, -size); // Top point
             myContext.lineTo(size, size); // Bottom right point
@@ -233,23 +234,23 @@
             myContext.strokeStyle = currentColor;
             myContext.lineWidth = currentLineWidth;
             myContext.stroke();
-            myContext.restore(); // Restore state
+            myContext.restore(); // Restore the original state
         }
 
         function animateTriangle() {
-            myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear the canvas
-            drawTriangle(myCanvas.width / 2, myCanvas.height / 2, scale * Math.sin(angle), scale * Math.sin(angle / 2)); // Draw animated triangle
-            scale += 0.5; // Increase size gradually
-            angle += 0.1; // Increase rotation angle
+            myContext.clearRect(0, 0, myCanvas.width, myCanvas.height); // Clear the canvas for each frame
+            drawTriangle(myCanvas.width / 2, myCanvas.height / 2, scale, angle); // Draw the triangle
+            scale += 1; // Increase size
+            angle += 0.05; // Increase angle for rotation
 
-            if (scale < 100) { // Maintain a size limit
-                animationId = requestAnimationFrame(animateTriangle);
+            if (scale < 100) { // Stop increasing size after reaching a limit
+                animationId = requestAnimationFrame(animateTriangle); // Request the next frame
             }
         }
 
         function startAnimatedTriangle() {
-            angle = 0; // Reset angle for animation
             scale = 1; // Reset size for animation
+            angle = 0; // Reset angle for animation
             animateTriangle(); // Start the animation
         }
 
@@ -257,20 +258,21 @@
             myContext.beginPath();
             myContext.moveTo(200, 300);
             myContext.bezierCurveTo(250, 100, 350, 500, 400, 300);
-            myContext.strokeStyle = currentColor;
-            myContext.lineWidth = currentLineWidth;
             myContext.stroke();
         }
 
         function drawStar(cx, cy, spikes, outerRadius, innerRadius) {
-            let rot = (Math.PI / 2) * 3; // Starting rotation
-            const step = Math.PI / spikes; // Angle between spikes
+            let rot = (Math.PI / 2) * 3;
+            let x = cx;
+            let y = cy;
+            const step = Math.PI / spikes;
+
             myContext.beginPath();
             myContext.moveTo(cx, cy - outerRadius);
 
             for (let i = 0; i < spikes; i++) {
-                let x = cx + Math.cos(rot) * outerRadius;
-                let y = cy + Math.sin(rot) * outerRadius;
+                x = cx + Math.cos(rot) * outerRadius;
+                y = cy + Math.sin(rot) * outerRadius;
                 myContext.lineTo(x, y);
                 rot += step;
 
@@ -292,24 +294,26 @@
             let x = 500; // Center x for the cube
             let y = 300; // Center y for the cube
             
-            // Define the vertices of the cube
+            // Define cube vertices
             let vertices = [
-                {x: x - size, y: y - size, z: -size}, // Front top left
-                {x: x + size, y: y - size, z: -size}, // Front top right
-                {x: x + size, y: y + size, z: -size}, // Front bottom right
-                {x: x - size, y: y + size, z: -size}, // Front bottom left
-                {x: x - size, y: y - size, z: size},  // Back top left
-                {x: x + size, y: y - size, z: size},  // Back top right
-                {x: x + size, y: y + size, z: size},  // Back bottom right
-                {x: x - size, y: y + size, z: size}   // Back bottom left
+                {x: x - size, y: y - size, z: -size}, // Front Top Left
+                {x: x + size, y: y - size, z: -size}, // Front Top Right
+                {x: x + size, y: y + size, z: -size}, // Front Bottom Right
+                {x: x - size, y: y + size, z: -size}, // Front Bottom Left
+                {x: x - size, y: y - size, z: size},  // Back Top Left
+                {x: x + size, y: y - size, z: size},  // Back Top Right
+                {x: x + size, y: y + size, z: size},  // Back Bottom Right
+                {x: x - size, y: y + size, z: size}   // Back Bottom Left
             ];
 
+            // Define projection scale (for perspective)
+            let scale = 200; 
             let projectedVertices = vertices.map(v => ({
-                x: v.x * 200 / (v.z + 200) + x,
-                y: v.y * 200 / (v.z + 200) + y
+                x: v.x * scale / (v.z + scale) + x,
+                y: v.y * scale / (v.z + scale) + y
             }));
 
-            // Draw the cube edges
+            // Draw edges of the cube
             myContext.beginPath();
             for (let i = 0; i < 4; i++) {
                 myContext.moveTo(projectedVertices[i].x, projectedVertices[i].y);
@@ -319,8 +323,6 @@
                 myContext.moveTo(projectedVertices[i].x, projectedVertices[i].y);
                 myContext.lineTo(projectedVertices[i + 4].x, projectedVertices[i + 4].y); // Connecting edges
             }
-            myContext.strokeStyle = currentColor;
-            myContext.lineWidth = currentLineWidth;
             myContext.stroke();
         }
 
@@ -338,17 +340,6 @@
 
         function clearAll() {
             myContext.clearRect(0, 0, myCanvas.width, myCanvas.height);
-        }
-
-        function finalizeShape() {
-            // This function will be used for any actions required for the current drawing mode
-            if (drawingMode === 'rectangle') {
-                drawRectangle(lastX, lastY, lastX + 0, lastY + 0); // To finalize without moving cursor
-            } else if (drawingMode === 'circle') {
-                drawCircle(lastX, lastY, lastX + 0, lastY + 0); // To finalize without moving cursor
-            } else if (drawingMode === 'triangle') {
-                drawTriangle(lastX, lastY, lastX + 0, lastY + 0); // To finalize without moving cursor
-            }
         }
 
         function setDrawingMode(mode) {
