--- a/public/t2a23-game-template-aden.html
+++ b/public/t2a23-game-template-aden.html
@@ -1,70 +1,72 @@
-<h6> Version 0.0.1 </h6>
 
-<body id="myBody" style="background-repeat:repeat; background-size: 80%" background="myBackground01.jpg">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>T2A11 Game Template</title>
+    <style>
+        body {
+            background-repeat: repeat;
+            background-size: 80%;
+            background-image: url('myBackground01.jpg');
+        }
+        h1, h6 {
+            text-align: center;
+        }
+    </style>
+</head>
+<body id="myBody">
 
-<h1 align=center>t2a11 Game Template by Fred</h1>
-<br><br><br><br>
+    <h1>T2A11 Game Template by Fred</h1>
+    <h6>Version 0.0.1</h6>
+    <br><br><br><br>
 
-<script>
+    <script>
+        // Global variables here
+        let myGlobalX = 0;
+        let myClock;
 
-   // global variables here
-   let myGlobalX = 0
-   let myClock
+        // Global functions here
+        function myHitOther(my1, my2) {
+            let left1 = parseInt(document.getElementById(my1).style.left);
+            let right1 = left1 + parseInt(document.getElementById(my1).style.width);
+            let top1 = parseInt(document.getElementById(my1).style.top);
+            let bottom1 = top1 + parseInt(document.getElementById(my1).style.height);
+            let left2 = parseInt(document.getElementById(my2).style.left);
+            let right2 = left2 + parseInt(document.getElementById(my2).style.width);
+            let top2 = parseInt(document.getElementById(my2).style.top);
+            let bottom2 = top2 + parseInt(document.getElementById(my2).style.height);
+            return (right1 >= left2 && bottom1 >= top2 && left1 <= right2 && top1 <= bottom2);
+        }
 
+        function myCheckHit() {
+            if (myHitOther('myImg01', 'myImg02')) {
+                alert('You lose');
+                document.getElementById('myImg01').style.left = '20px';
+                location.href = 't2a13-keydown.html'; // Go to your next level
+            }
+            // More if statements here like the above
+        }
+    </script>
 
-   // global functions here
-function myHitOther(my1,my2){
-   left1   = parseInt(document.getElementById(my1).style.left)
-   right1  = left1 + parseInt(document.getElementById(my1).style.width)
-   top1    = parseInt(document.getElementById(my1).style.top)   
-   bottom1 = top1   + parseInt(document.getElementById(my1).style.height)
-   left2   = parseInt(document.getElementById(my2).style.left)
-   right2  = left2 + parseInt(document.getElementById(my2).style.width)
-   top2    = parseInt(document.getElementById(my2).style.top)   
-   bottom2 = top2   + parseInt(document.getElementById(my2).style.height)
-   if ((right1  >=  left2  ) &&      	   
-       (bottom1 >=  top2   ) &&
-       (left1   <=  right2 ) &&
-       (top1    <=  bottom2) ){
-       return true
-   }
-}
+    <img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;" src="https://i.ibb.co/NtcGP2L/greninja.jpg" alt="Greninja">
+    <img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="https://i.ibb.co/b612Tcx/charizard.jpg" alt="Charizard">
 
+    <input type="button" value="Auto Background Left" onclick="{
+        clearInterval(myClock);
+        let myTemp = '100px 0px';
+        myClock = setInterval(function(){
+            myGlobalX -= 5;
+            myTemp = myGlobalX + 'px 0px';
+            document.getElementById('myBody').style.backgroundPosition = myTemp;
+        }, 100);
+    }">
 
-function myCheckHit(){
-   if ( myHitOther('myImg01','myImg02') ){
-       alert('you lose')  
-       document.getElementById('myImg01').style.left = '20px'
-       location = 't2a13-keydown.html'  // go to your next level
-   }
+    <input type="button" value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
+        document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px';
+        myCheckHit(); // Checks for all collisions
+    }"><br><br>
 
-
-   // more if statements here like the above
-
-
-
-}  // end of myCheckHit()
-
-
-</script>
-
-<img id="myImg01" style="position:absolute; width:100px; height:80px; top:0px; left:50px;"  src="myImage01.jpg">
-<img id="myImg02" style="position:absolute; width:100px; height:80px; top:0px; left:250px;" src="myImage02.jpg">
-
-<input type=button value="Auto Background Left" onclick="{
-  clearInterval(myClock)
-  let myTemp = '100px 0px'
-  myClock = setInterval(function(){
-      myGlobalX -= 5
-      myTemp =  myGlobalX + 'px 0px'
-      document.getElementById('myBody').style.backgroundPosition = myTemp
-  }, 100)
-    
-}">
-
-
-<input type=button value="Image Right Fast Button" onTouchStart="{this.click(); event.preventDefault();}" onclick="{
-  document.getElementById('myImg01').style.left = parseInt(document.getElementById('myImg01').style.left) + 10 + 'px'
-  myCheckHit()     // checks for all collisions
-}"><br><br>
-
+</body>
+</html>
