--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -6,12 +6,13 @@
     <title>T2A11 Game Template</title>
     <style>
         body {
-            background-repeat: repeat;
-            background-size: 80%;
-            background-image: url('myBackground01.jpg'); /* Ensure this image exists */
+            background-repeat: no-repeat; /* Change this to no-repeat */
+            background-size: cover; /* Change size to cover so it fits the whole window */
+            background-image: url('https://i.ibb.co/ggWykJY/cool-desktop-wallpaper-wallpapers-backgrounds-images-art-photos-pictures-free-best-1920x1080-coolwal.jpg');
         }
         h1, h6 {
             text-align: center;
+            color: white; /* Optional: Change text color for better visibility against background */
         }
     </style>
 </head>
